# diffusion-bench-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: performance-report.yml
.github/workflows/: pages.yml
configs/: comparison_configs.json  vllm_omni_cosmos3_h200_1gpu_guardrails_off.yaml  vllm_omni_cosmos3_h200_2gpu_cfg_guardrails_off.yaml
docs/: index.html  redesign.html
docs/data/: historical-cross-framework.json  latest-cross-framework.json
docs/gallery/: manifest.json
docs/sglang_probe/: 20260620_final_merge_summary.json  20260620_matrix.json  20260620_probe_report.md  20260620_trusted_failed_cells.txt  README.md
manifests/: 20260510-h200-single-e2e.json  20260511-h200-throughput-fast.json  20260513-h200-ltx-lightx2v.json  20260514-h200-wan-vllm-omni.json  20260601-h200-cosmos3.json
reports/: README.md
reports/b200-cross-framework-20260701/: manifest.json  merged.json  summary.md
scripts/: export_historical_onepager_data.py  export_onepager_data.mjs  generate_h200_report_artifacts.sh  install_comparison_frameworks.sh  install_lightx2v_fa3_from_hf.py  killall_sglang.sh  probe_h200_cosmos3_sglang_profiles_20260601.sh  probe_h200_cosmos3_vllm_omni_video_profiles_20260601.sh  refresh_docs_data.py  reinstall_comparison_framework.sh  run_b200_cross_framework_20260701.sh  run_flux_fastest_20260610.sh  run_h100_ltx_lightx2v_20260513.sh  run_h200_cosmos3_20260601.sh  run_h200_cosmos3_latest_main_2gpu_20260603.sh  run_h200_flux1_cosmos3_spotcheck_20260610.sh  run_h200_flux_cosmos3_spotcheck_20260610.sh  run_h200_ltx_lightx2v_20260513.sh  run_h200_single_e2e_20260510.sh  run_h200_throughput_20260511.sh  run_h200_throughput_common_20260514.sh  run_h200_video_parallelism_refresh_20260611.sh  run_h200_wan_vllm_omni_20260514.sh  run_trtllm_visual_h200.md  setup_flux_fastest_remote_20260610.sh  summarize_result_jsons.py
(+68 files in other folders)
