[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-bench-framework"
version = "0.1.0"
description = "Cross-framework benchmark harness for diffusion serving stacks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp",
  "huggingface_hub",
  "matplotlib",
  "numpy",
  "pillow",
  "requests",
  "safetensors",
  "tqdm",
]

[project.scripts]
diffusion-bench-compare = "diffusion_bench.run_comparison:main"
diffusion-bench-serving = "diffusion_bench.bench_serving:main"
diffusion-bench-dashboard = "diffusion_bench.generate_dashboard:main"
diffusion-bench-report-artifacts = "diffusion_bench.build_report_artifacts:main"
diffusion-bench-report-image = "diffusion_bench.generate_report_image:main"
diffusion-bench-flux-regression-image = "diffusion_bench.generate_flux_regression_image:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
diffusion_bench = ["comparison_configs.json"]
